--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png" />
+
+    <!-- Title & Branding -->
+    <title>ConseQ-X | Engineering Healthier Organizations</title>
+
+    <!-- Meta Tags -->
+    <meta name="description" content="ConseQ-X helps organizations scale with alignment, flow, and intentionality through systems-thinking diagnostics and design." />
+    <meta name="keywords" content="ConseQ-X, Systems Thinking, Organizational Design, Business Transformation, Growth Consulting" />
+    <meta name="author" content="ConseQ-X Consulting" />
+    <meta name="theme-color" content="#facc15" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" type="image/png" href="%PUBLIC_URL%/logo.png" />
+
+    <!-- Manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.jso" />
+
+    <!-- Fonts (optional) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Example font import -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+
+    <!-- Open Graph (for social sharing) -->
+    <meta property="og:title" content="ConseQ-X" />
+    <meta property="og:description" content="Engineering Healthier Organizations through strategic systems design and diagnostics." />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://www.conseq-x.com" />
+    <meta property="og:type" content="website" />
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body class="antialiased text-gray-800">
+    <noscript>
+      <div style="text-align:center; margin-top: 50px;">
+        <h2>🚫 JavaScript Disabled</h2>
+        <p>ConseQ-X requires JavaScript to run. Please enable it in your browser to explore our services.</p>
+      </div>
+    </noscript>
+
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
